# FolpsD

./: .gitignore  Fit_fs_Abacus2gen_PS_BS_new.py  README.md  pyproject.toml  validate_multipoles_tables.py
.github/workflows/: docs.yml
_tests/: F_compare_to_folpsv1_pkloop.ipynb  F_folpsv1_pkloop.npy  H_Carol_monopole.txt  H_bk202_hit.txt  H_compare_to_Hitomi.ipynb  H_k_new.txt  M_Bl1l2L_mathematica.txt  M_Sugiyama_basis.nb  M_compare_to_mathematica.ipynb  pk_linear_simtocmass.txt
docs/: Classes.rst  Installation.rst  README_deploy.md  Requirements.rst  api.rst  conf.py  examples.rst  usage.rst
docs/api/: Backend_and_helpers.rst  BispectrumCalculator.rst  MatrixCalculator.rst  NonLinearPowerSpectrumCalculator.rst  Tools.rst  (+1 more)
examples/: run_simple.py
folps/: Fit_fs_Abacus2gen.py  Fit_fs_Abacus2gen_PS_BS_new.py  Fit_fs_Abacus2gen_PS_arg.py  Fit_fs_schoneberg2024-bbn_planck2018-ns10_physprior_LCDM_kmax020_new-Copy1.py  __init__.py  cosmo_bacco.py  cosmo_class.py  cutsky_data_tools_new.py  fit_fs_PS_BS.ipynb  fit_fs_trial.ipynb  folps-prakhar.py  folps.py  folps_desilike_test.ipynb  folps_newtest-Copy1.ipynb  inputpkT.txt  job_script_fsy1.batch  mcmc_Isaac.py  run_folps.ipynb  run_folps_jax.ipynb  run_folps_numpy.ipynb  test_compare_folps_numpy_vs_jax.py  test_folps_jax.py  test_folps_numpy.py  tools.py  tools_jax.py
folps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: B000_B202_windowing.ipynb  example.ipynb  example_folps_jax.ipynb  example_folps_numpy.ipynb  example_jax_Check.ipynb  k1k2k3.txt  run_folps_jax.ipynb  run_folps_numpy.ipynb
(+134 files in other folders)
